fix dollar sign and button alignment on menu item

--- a/app/assets/stylesheets/microposts.scss
+++ b/app/assets/stylesheets/microposts.scss
@@ -183,10 +183,10 @@
     display: flex;
     justify-content: space-between;
     a {
-      // display: flex;
-      // align-items: center;
-      // justify-content: center;
-      // align-self: flex-start;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      align-items: center;
       margin-top: 5px;
       // position: absolute;
       // top: -30px;
@@ -196,7 +196,7 @@
       color: $s-bg-primary;
       padding: 5px 10px;
       border-radius: 5px;
-      font-size: 0.8em;
+      font-size: 1em;
       &.btn-red {
         background-color: #ea4335;
       }
